@@ -2,6 +2,7 @@ Revision history for Twitter::API
 
 {{$NEXT}}
   - updated examples for changes semantics in 0.0104
+  - added example/oauth_webapp.psgi
 
 0.0104  2016-12-08 15:10:34 PST (TRIAL RELEASE)
   - added Net::Twitter/::Lite migration support
